--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @inproceedings{interacte2020,
   title={InteractE: Improving Convolution-based Knowledge Graph Embeddings by Increasing Feature Interactions},
-  author={Sanyal, Soumya and Vashishth, Shikhar and Nitin, Vikram and
+  author={Sanyal*, Soumya and Vashishth*, Shikhar and Nitin, Vikram and
          Agrawal, Nilesh and Talukdar, Partha},
   booktitle={Thirty-Fourth AAAI Conference on Artificial Intelligence},
   year={2020},
@@ -13,7 +13,7 @@
 
 @article{compgcn2020,
   title={Composition-based Multi-Relational Graph Convolutional Networks},
-  author={Sanyal, Soumya and Vashishth, Shikhar and Nitin, Vikram and Talukdar, Partha},
+  author={Sanyal*, Soumya and Vashishth*, Shikhar and Nitin, Vikram and Talukdar, Partha},
   journal={arXiv preprint arXiv:1911.03082},
   year={2019},
   pdf={compgcn.pdf},
@@ -21,7 +21,7 @@
 
 @article{kgeval,
     title={A Re-evaluation of Knowledge Graph Completion Methods},
-    author={Zhiqing Sun and Shikhar Vashishth and Soumya Sanyal and Partha Talukdar and Yiming Yang},
+    author={Zhiqing Sun* and Shikhar Vashishth* and Soumya Sanyal* and Partha Talukdar and Yiming Yang},
     journal={arXiv preprint arXiv:1911.03903},
     year={2019},
     pdf={kgeval.pdf},
