--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,15 @@
   pdf={interacte.pdf},
 }
 
+@inproceedings{asap2020,
+    title={ASAP: Adaptive Structure Aware Pooling for Learning Hierarchical Graph Representations},
+    author={Ekagra Ranjan and Soumya Sanyal and Partha Pratim Talukdar},
+    year={2020},
+    booktitle={Thirty-Fourth AAAI Conference on Artificial Intelligence},
+    year={2020},
+    pdf={asap.pdf},
+}
+
 @article{compgcn2020,
   title={Composition-based Multi-Relational Graph Convolutional Networks},
   author={Sanyal*, Soumya and Vashishth*, Shikhar and Nitin, Vikram and Talukdar, Partha},
