--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,10 @@
----
----
+@article{compgcn2020,
+  title={Composition-based Multi-Relational Graph Convolutional Networks},
+  author={Sanyal*, Soumya and Vashishth*, Shikhar and Nitin, Vikram and Talukdar, Partha},
+  year={2020},
+  journal={International Conference on Learning Representations},
+  pdf={compgcn.pdf},
+}
 
 @inproceedings{interacte2020,
   title={InteractE: Improving Convolution-based Knowledge Graph Embeddings by Increasing Feature Interactions},
@@ -17,15 +22,8 @@
     year={2020},
     booktitle={Thirty-Fourth AAAI Conference on Artificial Intelligence},
     year={2020},
+    code={https://github.com/malllabiisc/ASAP},
     pdf={asap.pdf},
-}
-
-@article{compgcn2020,
-  title={Composition-based Multi-Relational Graph Convolutional Networks},
-  author={Sanyal*, Soumya and Vashishth*, Shikhar and Nitin, Vikram and Talukdar, Partha},
-  journal={arXiv preprint arXiv:1911.03082},
-  year={2019},
-  pdf={compgcn.pdf},
 }
 
 @article{kgeval,
