--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
   year={2020},
   journal={International Conference on Learning Representations},
   pdf={compgcn.pdf},
+  code={https://github.com/malllabiisc/CompGCN},
 }
 
 @inproceedings{interacte2020,
@@ -14,6 +15,8 @@
   year={2020},
   code={https://github.com/malllabiisc/InteractE},
   pdf={interacte.pdf},
+  slides={interacte_slides.pdf},
+  poster={interacte_poster.pdf},
 }
 
 @inproceedings{asap2020,
@@ -24,6 +27,8 @@
     year={2020},
     code={https://github.com/malllabiisc/ASAP},
     pdf={asap.pdf},
+    slides={asap_slides.pdf},
+    poster={asap_poster.pdf},
 }
 
 @article{kgeval,
