--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,20 @@
+@article {proteingcn2020,
+  author = {Sanyal, Soumya and Anishchenko, Ivan and Dagar, Anirudh and Baker, David and Talukdar, Partha},
+  title = {ProteinGCN: Protein model quality assessment using Graph Convolutional Networks},
+  year = {2020},
+  journal = {bioRxiv},
+  pdf={proteingcn.pdf},
+  code={https://github.com/malllabiisc/ProteinGCN},
+}
+
+@article{kgeval,
+    title={A Re-evaluation of Knowledge Graph Completion Methods},
+    author={Zhiqing Sun* and Shikhar Vashishth* and Soumya Sanyal* and Partha Talukdar and Yiming Yang},
+    journal={Annual Conference of the Association for Computational Linguistics},
+    year={2020},
+    pdf={kgeval.pdf},
+}
+
 @article{compgcn2020,
   title={Composition-based Multi-Relational Graph Convolutional Networks},
   author={Sanyal*, Soumya and Vashishth*, Shikhar and Nitin, Vikram and Talukdar, Partha},
@@ -29,14 +46,6 @@
     pdf={asap.pdf},
     slides={asap_slides.pdf},
     poster={asap_poster.pdf},
-}
-
-@article{kgeval,
-    title={A Re-evaluation of Knowledge Graph Completion Methods},
-    author={Zhiqing Sun* and Shikhar Vashishth* and Soumya Sanyal* and Partha Talukdar and Yiming Yang},
-    journal={arXiv preprint arXiv:1911.03903},
-    year={2019},
-    pdf={kgeval.pdf},
 }
 
 @article{mtcgcnn,
